added self play logic, changed action selection scheme

--- a/train_rl_player.ipynb
+++ b/train_rl_player.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "def train_agent(agent, env, num_episodes, max_steps, batch_size, epsilon_decay, sample_freq=10, display_progress=False, save_model=False, player_types=[]):\n",
+    "def train_agent(agent, env, num_episodes, max_steps, batch_size, reward_dict, update_freq, sample_freq, win_threshold=0.8, display_progress=False, save_model=False, player_types=[]):\n",
     "    total_rewards = []\n",
-    "    epsilon = 0.0\n",
+    "    epsilon = 1.0\n",
     "    win_rates = []\n",
     "\n",
     "    for episode in tqdm(range(num_episodes), desc='Episode Loop'):\n",
@@ -74,26 +73,27 @@
     "        \n",
     "        while not done and step <= max_steps:\n",
     "            # Action selection\n",
-    "            action = agent.get_action(state, agent.name, epsilon)\n",
+    "            #action = agent.get_action(state, agent.name, agent.epsilon)\n",
     "\n",
     "            # Environment stepping\n",
-    "            next_state, reward, done = env.step(action)\n",
+    "            action, next_state, reward, done = env.step(reward_dict)\n",
     "\n",
     "            # For adding experience\n",
     "            agent.add_experience(state, action, reward, next_state, done)\n",
-    "\n",
-    "            # Replaying experience\n",
-    "            if len(agent.replay_buffer) >= batch_size:\n",
-    "                agent.replay_experience(batch_size, agent.name)\n",
     "\n",
     "            # Update the game state and history for the next iteration\n",
     "            state = next_state\n",
     "            total_reward += reward\n",
     "            step += 1\n",
+    "        \n",
+    "         # Replaying experience\n",
+    "        if len(agent.replay_buffer) >= batch_size and episode % update_freq == 0:\n",
+    "            agent.replay_experience(batch_size, agent.name)\n",
     "\n",
     "        # Decay epsilon\n",
-    "        epsilon *= epsilon_decay\n",
-    "\n",
+    "        agent.epsilon = max(agent.epsilon * agent.epsilon_decay, agent.epsilon_min)\n",
+    "        \n",
+    "        \n",
     "        # Save the total reward for this episode\n",
     "        total_rewards.append(total_reward)\n",
     "\n",
@@ -105,7 +105,15 @@
     "            win_pct = len([w for w in winners if w == agent.name]) / len(winners)\n",
     "            win_rates.append(win_pct)\n",
     "            #print win rates\n",
-    "            print(f\"Episode {episode + 1}/{num_episodes} - Win Rate: {win_pct}\")\n",
+    "            print(f\"Episode {episode + 1}/{num_episodes} - Win Rate: {win_pct} - Epsilon: {agent.epsilon}\")\n",
+    "            \n",
+    "            #if last 10 win rates are all over threshold, update the other players to main agent's weights\n",
+    "            if len(win_rates) >= 10 and all([w > win_threshold for w in win_rates[-10:]]):\n",
+    "                for player in env.players:\n",
+    "                    if player.name != agent.name:\n",
+    "                        player.model.load_state_dict(agent.model.state_dict())\n",
+    "                        print(f\"Updating {player.name} to {agent.name}'s weights\")\n",
+    "                break\n",
     "\n",
     "    if display_progress:\n",
     "        plt.plot([x * sample_freq + 1 for x in list(range(len(win_rates)))], win_rates, label=\"agent win rate\")\n",
@@ -123,18 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38724b3b896e436e8954e8c30d1b3610",
+       "model_id": "a038d791e5f84db8a4cc77064a642677",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Episode Loop:   0%|          | 0/100 [00:00<?, ?it/s]"
+       "Episode Loop:   0%|          | 0/10000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -144,42 +152,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Players: [<player.Player object at 0x7fbfe6e5bca0>, <player.Player object at 0x7fbfe6e5bd90>, <player.Player object at 0x7fbfe6e5b490>]\n",
-      "Env players: [<player.Player object at 0x7fbfe6e5b460>, <player.Player object at 0x7fbfe6e5bd90>, <player.Player object at 0x7fbfe6e5b490>]\n",
-      "Episode 1/100 - Win Rate: 0.33\n",
-      "Players: [<player.Player object at 0x7fbff5e9d490>, <player.Player object at 0x7fbfe6e5bd90>, <player.Player object at 0x7fbfe6e5b490>]\n",
-      "Env players: [<player.Player object at 0x7fbfe6e5b460>, <player.Player object at 0x7fbfe6e5bd90>, <player.Player object at 0x7fbfe6e5b490>]\n",
-      "Episode 2/100 - Win Rate: 0.39\n",
-      "Players: [<player.Player object at 0x7fbfe79dad90>, <player.Player object at 0x7fbfe6e5bd90>, <player.Player object at 0x7fbfe6e5b490>]\n",
-      "Env players: [<player.Player object at 0x7fbfe6e5b460>, <player.Player object at 0x7fbfe6e5bd90>, <player.Player object at 0x7fbfe6e5b490>]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 23>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m max_steps_per_episode \u001b[39m=\u001b[39m \u001b[39m50\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m epsilon_decay \u001b[39m=\u001b[39m \u001b[39m0.99\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m total_rewards, win_rates \u001b[39m=\u001b[39m train_agent(agent1, env, num_episodes, max_steps_per_episode, batch_size, epsilon_decay, sample_freq\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m ,display_progress\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[1;32m/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb Cell 4\u001b[0m in \u001b[0;36mtrain_agent\u001b[0;34m(agent, env, num_episodes, max_steps, batch_size, epsilon_decay, sample_freq, display_progress, save_model, player_types)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mPlayers:\u001b[39m\u001b[39m\"\u001b[39m, players)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnv players:\u001b[39m\u001b[39m\"\u001b[39m, env\u001b[39m.\u001b[39mplayers)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m winners \u001b[39m=\u001b[39m run_simulation(env\u001b[39m.\u001b[39;49mplayers)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m win_pct \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m([w \u001b[39mfor\u001b[39;00m w \u001b[39min\u001b[39;00m winners \u001b[39mif\u001b[39;00m w \u001b[39m==\u001b[39m agent\u001b[39m.\u001b[39mname]) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(winners)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m win_rates\u001b[39m.\u001b[39mappend(win_pct)\n",
-      "\u001b[1;32m/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb Cell 4\u001b[0m in \u001b[0;36mrun_simulation\u001b[0;34m(players, shuffle_turn_order, num_games)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mlen\u001b[39m(game\u001b[39m.\u001b[39mgame_state[\u001b[39m'\u001b[39m\u001b[39mplayers\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     turn_start \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     game\u001b[39m.\u001b[39;49msimulate_turn()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     turn_end \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/okg21/Desktop/robotics/coup/train_rl_player.ipynb#W4sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     turn_count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "File \u001b[0;32m~/Desktop/robotics/coup/game.py:44\u001b[0m, in \u001b[0;36mGame.simulate_turn\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     41\u001b[0m players, deck, player_cards, player_deaths, player_coins, current_player \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39munpack_gamestate()\n\u001b[1;32m     42\u001b[0m action, block_1, block_2 \u001b[39m=\u001b[39m (\u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m), (\u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m), (\u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m---> 44\u001b[0m action \u001b[39m=\u001b[39m current_player\u001b[39m.\u001b[39;49mdecision(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgame_state, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mhistory)\n\u001b[1;32m     46\u001b[0m \u001b[39mfor\u001b[39;00m player \u001b[39min\u001b[39;00m [p \u001b[39mfor\u001b[39;00m p \u001b[39min\u001b[39;00m players \u001b[39mif\u001b[39;00m p\u001b[39m.\u001b[39mname \u001b[39m!=\u001b[39m current_player\u001b[39m.\u001b[39mname]:\n\u001b[1;32m     47\u001b[0m     potential_block_1 \u001b[39m=\u001b[39m player\u001b[39m.\u001b[39mblock(action, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgame_state, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhistory)\n",
-      "File \u001b[0;32m~/Desktop/robotics/coup/player.py:27\u001b[0m, in \u001b[0;36mPlayer.decision\u001b[0;34m(self, game_state, history)\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecision_fn(game_state, history, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname)\n\u001b[1;32m     26\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 27\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdecision_fn(game_state, history, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mname, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49magent)\n",
-      "File \u001b[0;32m~/Desktop/robotics/coup/rl_player.py:217\u001b[0m, in \u001b[0;36mrltraining_decision\u001b[0;34m(game_state, history, name, agent)\u001b[0m\n\u001b[1;32m    215\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrltraining_decision\u001b[39m(game_state, history, name, agent):\n\u001b[1;32m    216\u001b[0m     \u001b[39m#create state\u001b[39;00m\n\u001b[0;32m--> 217\u001b[0m     action \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39;49mget_action((game_state, history), name, \u001b[39m0\u001b[39;49m)    \u001b[39m#TO-DO: Change epsilon\u001b[39;00m\n\u001b[1;32m    218\u001b[0m     \u001b[39mreturn\u001b[39;00m action\n",
-      "File \u001b[0;32m~/Desktop/robotics/coup/rl_player.py:138\u001b[0m, in \u001b[0;36mQLearningAgent.get_action\u001b[0;34m(self, state, name, epsilon)\u001b[0m\n\u001b[1;32m    134\u001b[0m state \u001b[39m=\u001b[39m state_to_input(game_state, history, name)\n\u001b[1;32m    136\u001b[0m action_values \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel\u001b[39m.\u001b[39mforward(state)\n\u001b[0;32m--> 138\u001b[0m \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39;49mrand(\u001b[39m1\u001b[39;49m) \u001b[39m<\u001b[39;49m epsilon:\n\u001b[1;32m    139\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mrandom action\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    140\u001b[0m     possible_actions \u001b[39m=\u001b[39m generate_all_action(game_state[\u001b[39m'\u001b[39m\u001b[39mcurrent_player\u001b[39m\u001b[39m'\u001b[39m], game_state[\u001b[39m'\u001b[39m\u001b[39mplayers\u001b[39m\u001b[39m'\u001b[39m], game_state[\u001b[39m'\u001b[39m\u001b[39mplayer_coins\u001b[39m\u001b[39m'\u001b[39m], game_state[\u001b[39m'\u001b[39m\u001b[39mplayer_cards\u001b[39m\u001b[39m'\u001b[39m])\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Episode 1/10000 - Win Rate: 0.63 - Epsilon: 0.9995\n"
      ]
     }
    ],
    "source": [
     "n = 3\n",
     "state_dim = 10 + 11 * n\n",
-    "action_dim = 1 + 3 * n \n",
+    "action_dim = 1 + 3 * n\n",
     "learning_rate = 0.001\n",
     "gamma = 0.99\n",
     "\n",
-    "agent1 = QLearningAgent(state_dim, action_dim, learning_rate, gamma, 'Player 1', True)\n",
+    "reward_dict = { 'COIN_VALUE':1, 'CARD_VALUE':30, 'CARD_DIVERSITY_VALUE':2, 'WIN_VALUE':200 }\n",
+    "#we should be able to add things like challange_successfull reward and challange_failed reward\n",
+    "#but for now the challanging mechanism is rule based\n",
+    "\n",
+    "agent1 = QLearningAgent(state_dim, action_dim, learning_rate, gamma, 'Player 1', True, epsilon_decay=0.9995)\n",
     "agent2 = QLearningAgent(state_dim, action_dim, learning_rate, gamma, 'Player 2', False)\n",
     "agent3 = QLearningAgent(state_dim, action_dim, learning_rate, gamma, 'Player 3', False)\n",
     "\n",
@@ -190,12 +178,31 @@
     "env = Environment('Player 1', players)\n",
     "\n",
     "\n",
-    "num_episodes = 100\n",
-    "batch_size = 16\n",
+    "num_episodes = 10000\n",
+    "batch_size = 2048\n",
     "max_steps_per_episode = 50\n",
-    "epsilon_decay = 0.99\n",
     "\n",
-    "total_rewards, win_rates = train_agent(agent1, env, num_episodes, max_steps_per_episode, batch_size, epsilon_decay, sample_freq=1 ,display_progress=True)"
+    "total_rewards, win_rates = train_agent(agent1, env, num_episodes, max_steps_per_episode, batch_size, reward_dict, update_freq=10 ,sample_freq=1000, win_threshold=0.8, display_progress=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.006721111959865588"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.999)**5000"
    ]
   },
   {
